Fixing footer from  my folly. Wrap-reverse was for sure needed.

--- a/css/style.css
+++ b/css/style.css
@@ -410,7 +410,7 @@ form{
 
     footer{
         padding: 20px 25px;
-        flex-wrap: wrap;
+        flex-wrap: wrap-reverse;
         justify-content: center;
         position: relative;
     }
@@ -419,12 +419,14 @@ form{
         display: flex;
         flex-direction: column;
         margin: 10px 10px;
+        order: 3;
     }
 
     #links1{
         display: flex;
         flex-direction: column;
         margin: 10px 10px;
+        order: 2;
     }
 
     .contact1{
